k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: car-api
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30000
  selector:
    app: car-api
